# HandEyeSync

./: .gitignore  CMakeLists.txt  LICENSE-ZN.txt  LICENSE.txt  README.md  dlls.json  resources.qrc
LICENSES/: ThirdPartyLicenses.txt
cmake/: CopyImportedDLLs.cmake
data/EdgeTest/: calib0e_rt.ls  p1.yml  p10.yml  p11.yml  p13.yml  p14.yml  p15.yml  p17.yml  p18.yml  p19.yml  p2.yml  p20.yml  p22.yml  p24.yml  p25.yml  p26.yml  p27.yml  p28.yml  p3.yml  p4.yml  p5.yml  p7.yml  p8.yml  p9.yml
data/Experiments/Edge/: calib_edge.ls  p1.yml  p10.yml  p11.yml  p12.yml  p13.yml  p14.yml  p15.yml  p16.yml  p17.yml  p18.yml  p19.yml  p2.yml  p20.yml  p21.yml  p22.yml  p23.yml  p24.yml  p25.yml  p26.yml  p3.yml  p4.yml  p5.yml  p6.yml  p7.yml  p8.yml  p9.yml
data/Experiments/Sphere/: calib_sph.ls  p1.yml  p10.yml  p11.yml  p12.yml  p13.yml  p14.yml  p15.yml  p2.yml  p3.yml  p4.yml  p5.yml  p6.yml  p7.yml  p8.yml  p9.yml
data/LeiChi-04.25/camera0/: p1.yml  p10.yml  p11.yml  p12.yml  p13.yml  p14.yml  p15.yml  p16.yml  p17.yml  p18.yml  p19.yml  p2.yml  p20.yml  p21.yml  p22.yml  p23.yml  p24.yml  p25.yml  p26.yml  p27.yml  p28.yml  p29.yml  p3.yml  p30.yml  p31.yml  p32.yml  p33.yml  p34.yml  p35.yml  p36.yml  p4.yml  p5.yml  p6.yml  p7.yml  p8.yml  p9.yml
data/LeiChi-04.25/camera000/: calib_c0.ls  p1.yml  p10.yml  p11.yml  p12.yml  p13.yml  p14.yml  p15.yml  p16.yml  p17.yml  p18.yml  p19.yml  p2.yml  p20.yml  p21.yml  p22.yml  p23.yml  p24.yml  p25.yml  p26.yml  p27.yml  p28.yml  p29.yml  p3.yml  p30.yml  p31.yml  p32.yml  p33.yml  p34.yml  p35.yml  p36.yml  p4.yml  p5.yml  p6.yml  p7.yml  p8.yml  p9.yml
docs/Protocols/: SocketProtocol.md  收发报文测试（服务器AI Box）.txt
examples/: CMakeLists.txt
examples/SA-RibbonExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/: MainWindow.cpp  MainWindow.h  ThreadWorker.cpp  ThreadWorker.h  main.cpp
src/DockWidget/: DockWidgetBrowser.h  DockWidgetViewer.cpp
src/FrRobotIfLib/: CMakeLists.txt  FrRobotInterface.cpp  README.md  RobotComm.h  SampleUsage.cpp  Test.cpp  frrjif.h
src/FrRobotIfLib/MFC/: DlgProxy.cpp  DlgProxy.h  InputBox.cpp  InputBox.h  frrjiftest.cpp  frrjiftest.h  frrjiftestDlg.cpp  frrjiftestDlg.h  resource.h
src/FrRobotIfLib/RegisterHelper/: Register32Helper.cpp
src/FrRobotIfLib/RobotComm/: RobotComm.h  RobotComm_Constants.h  RobotComm_Core.cpp  RobotComm_Core.h  RobotComm_DataCurPos.h  RobotComm_DataNumReg.cpp  RobotComm_DataPosReg.cpp  RobotComm_DataPosReg.h  RobotComm_DataPosRegMG.cpp  RobotComm_DataString.cpp  RobotComm_DataSysVar.cpp  RobotComm_DataSysVarPos.cpp  RobotComm_DataSysVarPos.h  RobotComm_DataTable.cpp  RobotComm_Version.cpp
src/FrRobotIfLib/RobotComm/libCore/: RobotComm_LibCore.cpp
src/FrRobotIfLib/RobotCommCOM/: CMakeLists.txt  RobotCommCOM.cpp  resource.h
src/FrRobotIfLib/docs/: readme_jpn.txt
src/FrRobotIfLib/frrjif_net/: CMakeLists.txt
src/FrRobotIfLib/frrjif_net/docs/: readme_eng.txt
src/FrRobotIfLib/frrjif_net/src/: RobotComm_Constants.h  RobotComm_Core.cpp
src/FrRobotIfLib/sandbox/: FrRobotInterface.cpp  FrRobotInterface.h  Test.cpp  frrjif.h
src/FrRobotIfLib/sandbox/1/: CMakeLists.txt  FrRobotInterface.h
src/FrRobotIfLib/sandbox/2/RobotComm/: RobotComm_DataPosRegMG.h  RobotComm_DataString.h
src/FrRobotIfLib/sandbox/2/RobotCommCOM/: RobotCommCOM.h
src/FrRobotIfLib/sandbox/com/RobotComm/: RobotComm_DataAlarm.cpp  RobotComm_DataSysVar.h
src/FrRobotIfLib/sandbox/com/RobotComm/libCore/: RobotComm_LibCore.h
src/FrRobotIfLib/sandbox/com/RobotCommCOM/: RobotComm.idl  RobotCommCOM.rc  RobotCommCOM.rgs
src/FrRobotIfLib/sandbox/dotnet/: CMakeLists.txt  RobotComm_Core.h
src/FrRobotIfLib/sandbox/dotnet/libCore/: RobotComm_LibCore.h
src/ISightServer/: CMakeLists.txt  ISightServer.cpp  ISightServer.h  Message.h  MessageParser.cpp  MessageParser.h  Message_.cpp  main.cpp  message.cpp  message.h  message_parser.cpp  message_parser.h  protocol.h  tcp_server.cpp  tcp_server.h
src/LineScanners/: CMakeLists.txt  LineScannerInterface.cpp  LineScannerInterface.h  SensorCommon.h
src/LineScanners/LMI/: Connect.c  (+4 more)
src/LineScanners/SSZN/: CMakeLists.txt  Connect.c  Discover.c  GetDevSetting.c  Initialize.c  Open.c  ReceiveProfile.c  SRCommon.h  test.cpp
src/LsParser/: CMakeLists.txt  ProfileParser.h
src/PsHEC/: PsAlgorithm.cpp  PsCalibrator.cpp  common.h
src/PsHEC1/: CMakeLists.txt  DataProcessor.h  PsCalibrator.h  README.md
src/dockWidget/: CMakeLists.txt  DockWidgetBrowser.cpp  DockWidgetBrowser.h  DockWidgetLogger.cpp  DockWidgetLogger.h  DockWidgetProperty.cpp  DockWidgetProperty.h  DockWidgetViewer.cpp  DockWidgetViewer.h
src/fanucParser/: CMakeLists.txt  FanucParser.cpp  FanucParser.h  ProfileParser.cpp  ProfileParser.h  lsParser.cpp
src/ichec/: CMakeLists.txt  HandEyeCalib.h
src/ichec/data/cloudpnt/: 10_pntcld.exr  11_pntcld.exr  12_pntcld.exr  14_pntcld.exr  15_pntcld.exr  16_pntcld.exr  18_pntcld.exr  19_pntcld.exr  1_pntcld.exr  3_pntcld.exr  6_pntcld.exr
src/pshec/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  PsAlgorithm.cpp  PsAlgorithm.h  PsCalibrator.cpp  PsCalibrator.h  algorithm.cpp  algorithm.h  calibrator.cpp  calibrator.h  data_processor.cpp  data_processor.h  utils.cpp  utils.h
src/sandbox/FrRobotIfLib/sandbox/com/: CMakeLists.txt
src/sandbox/FrRobotIfLib/sandbox/com/RobotComm/: RobotComm_DataCurPos.cpp  RobotComm_DataPosRegXyzwpr.cpp  RobotComm_DataTask.cpp
src/sandbox/FrRobotIfLib/sandbox/com/RobotCommCOM/: RobotCommCOM.def
src/sandbox/StreamMotion/libfanucsm/: CMakeLists.txt
src/sandbox/StreamMotion/libfanucsm/data/: data.csv  data2.csv
src/sandbox/StreamMotion/libfanucsm/src/: exception.h  myendian.h  mysocket.cpp  raw_controller.cpp
src/sandbox/StreamMotion/rt_thread_example/: CMakeCache.txt  CMakeLists.txt
src/sandbox/StreamMotion/rt_thread_example/src/robot_controller/paths/: curve_two.txt
src/sandbox/StreamMotion/rt_thread_example/src/stream_motion/: endian.cpp  stream_motion.cpp  stream_motion.hpp  test.cpp
src/streamMotion/rt_thread_example/src/stream_motion/: CMakeLists.txt
styles/: style.qss  style_qcp.qss
(+187 files in other folders)
